# urc_gnc_autonav_ws

./: .gitignore  .gitmodules  frames.gv
.cache/clangd/index/: AngleAxis.hpp.9691CB730BA23C6A.idx  BufferNormalizerFilter.cpp.29D418D7775D9F54.idx  BufferNormalizerFilter.hpp.517AF09F0349A680.idx  BufferRegion.cpp.8D30A9645BFA4387.idx  BufferRegion.hpp.9D5196A0255C7311.idx  CVaRFilter.cpp.9BE462025B14C065.idx  CVaRFilter.hpp.FB802E7CAE0AC61C.idx  CircleIterator.cpp.D1D260DA7971A490.idx  CircleIterator.hpp.0859ADAFC416AEEB.idx  ColorBlendingFilter.cpp.F927238A37DEB349.idx  ColorBlendingFilter.hpp.7E1FEEAE9011A711.idx  ColorFillFilter.cpp.2EA85A85C6C6F863.idx  ColorFillFilter.hpp.8A2FA2DEBB15168A.idx  ColorMapFilter.cpp.0AD3F32C0DCD30DC.idx  ColorMapFilter.hpp.213FAD080F8513AD.idx  Core.4043ECA1128E8A2A.idx  Costmap2DConverter.hpp.EC9CF6AC200DDBE7.idx  Costmap2DConverterTest.cpp.2F767C8F164C2538.idx  CubicConvolutionInterpolationTest.cpp.962D7BD2DA6DFDCB.idx  CubicInterpolation.cpp.77B18497FF5FCB99.idx  CubicInterpolation.hpp.DD03650253650072.idx  CubicInterpolationTest.cpp.0AAB9C3C60CD9859.idx  CurvatureFilter.cpp.417BA83561809E7B.idx  CurvatureFilter.hpp.9F90DDE639985D17.idx  DeletionFilter.cpp.79E8F2EC873E6D3D.idx  DeletionFilter.hpp.8C5771696C7F3DB6.idx  DenseBasePlugin.hpp.4392FB87598035BC.idx  DistanceDerivatives.hpp.3C6921BDE97B64EB.idx  DuplicationFilter.cpp.515A540F9A860550.idx  DuplicationFilter.hpp.A93528CD426CCE55.idx  EigenLab.h.A07A8E2B5544F5FD.idx  EigenPluginsTest.cpp.42BF70451BA4D7B1.idx  ElevationMap.cpp.6C97A59C5E76F053.idx  ElevationMap.hpp.4A7246E7429DD81B.idx  ElevationMapFunctors.hpp.02931F44335598A1.idx  ElevationMapTest.cpp.B523C9D2083EA148.idx  ElevationMapping.cpp.7184FA33006409B0.idx  ElevationMapping.hpp.E3F43CAC8B2CA016.idx  EllipseIterator.cpp.75145916AD6011BC.idx  EllipseIterator.hpp.B0082CAD89BCAB60.idx  (+315 more)
gnc_description/: CMakeLists.txt
gnc_gazebo/: CMakeLists.txt
gnc_teleop/: package.xml
src/gnc_bringup/: CMakeLists.txt  package.xml
src/gnc_bringup/launch/: 1gnc_core.launch  2gnc_hwin.launch  3gnc_localization.launch  gnc_core.launch  gnc_gazebo.launch  gnc_rover.launch  gnc_simulation.launch  gnc_spawn.launch  gnc_teleop_test.launch  launch_sim.sh  protobot_core.launch  protobot_mapping_test.launch  protobot_onboard.launch  protobot_remote.launch  protobot_simulation.launch  ras_pi_launch.launch
src/gnc_control/: CMakeLists.txt  package.xml
src/gnc_control/config/: arm_config.yaml  control.yaml  controller_manager_settings.yaml  drive_hwin_settings.yaml  encoder_settings.yaml  odrive_7pole.json  robot_hwin_settings.yaml  wheel_hwin_settings.yaml
src/gnc_control/include/gnc_control/: arm_hardware_interface.h  drive_hwin.h  odrive.hpp  odrive_utils.hpp  roboclaw.h  robot_hardware_interface.h  settings.h  wheel_hardware_interface.h
src/gnc_control/launch/: gnc_arm_interface.launch  gnc_control.launch  gnc_control_hardware.launch  gnc_control_simulation.launch  gnc_drive.launch
src/gnc_control/msg/: odrive_msg.msg
src/gnc_control/scripts/: arduino_commands.py  arm_joy_control.py  arm_teleop.py  calibrate_drive.py  stuck_detection.py
src/gnc_control/src/: .control.cpp.swp  .drive_hwin.cpp.swp  arm_hardware_interface.cpp  control.cpp  drive_hwin.cpp  drive_node.cpp  odrive.cpp  odrive_endpoint.cpp  odrive_utils.cpp  roboclaw.cpp  robot_hardware_interface.cpp  wheel_hardware_interface.cpp
src/gnc_control/srv/: EncoderCount.srv  SliderPosition.srv
src/gnc_description/: package.xml
src/gnc_description/launch/: gnc_description.launch  gnc_rviz.launch  protobot_description.launch  protobot_rviz.launch  spawn.launch
src/gnc_description/rviz/: default.rviz  test.rviz
src/gnc_description/src/: OdomToTF.cpp
src/gnc_description/urdf/: Base.urdf.xacro  Base.xacro  Wheel.xacro  (+8 more)
src/gnc_executive/: CMakeLists.txt  package.xml  setup.py
src/gnc_executive/launch/: competition_sm.launch  gnss.launch  scenario_gps.launch
src/gnc_executive/mission/: coordinates.txt
src/gnc_executive/script/: .gnss_coordinates.py.swp  aruco_test_scenario.py  competition_scenario.py  gnss_coordinates.py  gps2utm_transform.py  gps2utm_transform.py_old  gps_scenario.py  statemach.py  wypt_srv.py
src/gnc_executive/script/state/: .goto_gnss.py.swp  _old_spira_search.py  aruco_scan.py  aruco_util.py  gate_traverse.py  goto_gnss.py  hex_search.py  repeat_gnss.py  spiral.py  spiral_search.py  wait.py  yolo_traverse.py
src/gnc_executive/script/test/: gps2utm_test.py
src/gnc_executive/srv/: CancelMission.srv  GPS2UTM.srv  GetNextCoordinate.srv  GetNextNoIncrement.srv  LaunchDetectService.srv  SetNextWaypoint.srv  StartMission.srv  UpdateCoordinates.srv
src/gnc_gazebo/: CMakeLists.txt  package.xml
src/gnc_gazebo/launch/: gnc_gazebo.launch  protobot_gazebo.launch
src/gnc_gazebo/mesh/: ar0.png:Zone.Identifier  ar1-1.png:Zone.Identifier  ar10.png:Zone.Identifier  ar11.png:Zone.Identifier  ar12.png:Zone.Identifier  ar13.png:Zone.Identifier  ar14.png:Zone.Identifier  ar15.png:Zone.Identifier  ar2.png:Zone.Identifier  ar3.png:Zone.Identifier  ar4.png:Zone.Identifier  ar5.png:Zone.Identifier  ar6.png:Zone.Identifier  ar7.png:Zone.Identifier  ar8.png:Zone.Identifier  ar9.png:Zone.Identifier  wheel.stl
src/gnc_gazebo/scripts/: camera_odom.py
src/gnc_gazebo/sensors/: _T265.xacro  _ZED.xacro  _ZED2.xacro  _d435i.xacro  _zedf9r.xacro  frames.gv
src/gnc_gazebo/world/: mdrs.world
src/gnc_gazebo/worlds/: elevation_mapping  marsmap.world  marsyard2022.world  testing_site  testing_site2
src/gnc_ground/: CMakeLists.txt  package.xml  readme.txt
src/gnc_hardware/: CMakeLists.txt  package.xml
src/gnc_localization/: CMakeLists.txt  package.xml
src/gnc_mapping/: CMakeLists.txt  frames.gv  package.xml
src/gnc_object_detection/: CMakeLists.txt  package.xml
src/gnc_planner/: CMakeLists.txt  package.xml
src/gnc_teleop/: CMakeLists.txt
src/gnc_waypoints/: CMakeLists.txt  package.xml
src/latency_ros_diagnostics/: CMakeLists.txt  package.xml
src/tegra_ros_diagnostics/: CMakeLists.txt  package.xml
src/tegra_ros_diagnostics/scripts/: tegrastats_node.py
(+91 files in other folders)
