<?xml version="1.0"?>
<package format="2">
  <name>gnc_gazebo</name>
  <version>0.0.0</version>
  <description>The gnc_gazebo package</description>

  <maintainer email="roselab@todo.todo">roselab</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <export>
	<gazebo_ros gazebo_media_path="${prefix}"/>
	<gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
